# wsb-sentiment

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  no-ai-attribution.yml
docs/: DESIGN.md
docs/decisions/: 0001-asof-cutoff-prior-close.md  0002-pit-universe-no-future-constituent.md  0003-train-only-scaler.md  0004-honest-weak-null.md  0005-synthetic-default-no-live-ingest.md
src/wsb_sentiment/: __init__.py  _constants.py  _exceptions.py  _manifest.py  _rng.py  _typing.py  _validation.py  cli.py  data.py  plots.py
src/wsb_sentiment/aggregate/: __init__.py  rollup.py
src/wsb_sentiment/backtest/: __init__.py  costs.py  engine.py  runner.py  stats.py  walk_forward.py
src/wsb_sentiment/evaluation/: __init__.py  _purge.py  bootstrap_ci.py  cpcv.py  dsr.py  hac.py  memmel.py  pbo.py  results.py  stats.py  verdict.py
src/wsb_sentiment/ingest/: __init__.py  extract.py  pushshift.py  reddit_api.py
src/wsb_sentiment/nlp/: __init__.py  textblob_parity.py  vader.py
src/wsb_sentiment/signal/: __init__.py  build.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/parity/: __init__.py  test_dsr_parity.py  test_nlp_parity.py
tests/property/: __init__.py  test_data_properties.py  test_rollup_signal_properties.py
tests/regression/: __init__.py  test_engine.py  test_honest_null.py
tests/unit/: __init__.py  test_cli.py  test_data.py  test_evaluation_stats.py  test_import_purity.py  test_ingest.py  test_plots.py  test_reused_primitives.py  test_verdict_and_reused.py
