[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsb-sentiment"
version = "0.1.0"
description = "A naive VADER r/wallstreetbets daily-sentiment signal, honestly backtested against next-day returns on a point-in-time S&P 500 universe; the mild in-sample edge largely decays out-of-sample after costs (Deflated Sharpe, PBO/CSCV, HAC)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FatihHekim0glu" }]
keywords = [
    "sentiment-analysis",
    "wallstreetbets",
    "alternative-data",
    "vader",
    "quantitative-finance",
    "backtesting",
    "deflated-sharpe",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://fatihhekimoglu.com"
Repository = "https://github.com/FatihHekim0glu/wsb-sentiment"
Changelog = "https://github.com/FatihHekim0glu/wsb-sentiment/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Lexicon sentiment + synthetic/cached data path. NO transformers/torch/TF.
data = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "vaderSentiment>=3.3",
    "textblob>=0.18",
    "pyarrow>=15.0",
    "diskcache>=5.6",
]
# OFFLINE batch ingestion adapter (Reddit/PRAW). Never required by the API.
ingest = [
    "praw>=7.7",
]
# Plotly figure builders (figures serialize to {data, layout} JSON).
viz = [
    "plotly>=5.20",
    "kaleido>=0.2.1",
]
# Typer console-script entry point. Imported lazily, never at package import time.
cli = [
    "typer>=0.12",
]
# Developer + parity-oracle + lint/type/test stack. Pulls in the cli extra so the
# Typer command smoke tests run rather than skip.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "typer>=0.12",
]

[project.scripts]
wsb-sentiment = "wsb_sentiment.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wsb_sentiment"]

[tool.hatch.build.targets.sdist]
include = [
    "src/wsb_sentiment",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
]
ignore = [
    "E501",    # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # math-style names (T, N) in tests

[tool.ruff.lint.pep8-naming]
# Math-style single-capital names (sample count T/N) are intentional.
extend-ignore-names = ["N", "T"]

# --------------------------------------------------------------------------- #
# mypy (strict)                                                               #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/wsb_sentiment"]

# Documented pandas override: pandas-stubs is incomplete for some DataFrame
# operations; we accept untyped pandas internals at the boundary while keeping
# our own signatures strictly typed. (House convention: curated pandas suppression.)
[[tool.mypy.overrides]]
module = ["pandas.*"]
follow_imports = "skip"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "statsmodels.*",
    "vaderSentiment.*",
    "textblob.*",
    "praw.*",
    "diskcache.*",
    "plotly.*",
    "typer.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast isolated unit tests",
    "property: Hypothesis property-based invariant tests",
    "parity: validation against an independent reference implementation",
    "regression: pinned-snapshot / locked-behaviour tests",
    "integration: end-to-end pipeline tests (synthetic data)",
    "slow: long-running tests",
]

# --------------------------------------------------------------------------- #
# Coverage                                                                     #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["wsb_sentiment"]
# Exclude the thin CLI adapter and the Plotly figure builders from the core gate:
# both are I/O / presentation glue exercised by smoke tests, not the numerical
# core the coverage bar is meant to protect.
omit = [
    "*/wsb_sentiment/cli.py",
    "*/wsb_sentiment/plots.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
